--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 1700px;
+  background-position-y: 0px;
+
+
 }
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
